feat(spin-java-module): add jlink main-class and enable-native-access configuration options